2003-07-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkEvent.c (Tk_HandleEvent): correct XCreateIC call for
	TK_XIM_SPOT usage. [Bug 742660] (takahashi)

2003-07-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinCursor.c (TkGetCursorByName): Fix bug 420510 to provide
	consistency between unix and windows -cursor option.

2003-07-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinDialog.c: doubled the TK_MULTI_MAX_PATH value to ~10K.
	This is a short-term solution until the -multiple option is
	extended.  [Bug 641261]

2003-07-18  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkWindow.c:
        * macosx/tkMacOSXDialog.c: added native tk_messageBox command,
        (Tk_MessageBoxObjCmd) for MacOS X platform.

        * macosx/tkMacOSXMenu.c: corrected encoding conversion for
        torn-off menu entries (but many other display problems still
        exist with these)

        * macosx/tkMacOSXMouseEvent.c: improved handling of events in the
        presence of grabs, particularly activation events.

2003-07-18  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/panedwindow.test (panedwindow-30.2): 
	* generic/tkPanedWindow.c (Tk_PanedWindowObjCmd): Ensure that we
	can share GCs between a panedwindow and its sash proxy, even if
	the panedwindow is in a toplevel with a different visual. [Bug 702230]

2003-07-17  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Makefile: Changes for new tcl buildsystem.

	* macosx/Wish.pbproj/jingham.pbxuser:
	* macosx/Wish.pbproj/project.pbxproj:
	Changes for new tcl buildsystem.
	Changed build to include tk specific html help in Tk.framework
	instead of Tcl.framework.
	Set default SYMROOT in target options to simplify setting up PB
	(manually setting common build folder for tcl & tk no longer needed).

	* macosx/README: Updated info for changes to buildsystem,
	html help location and PB setup.

2003-07-17  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
